[gd_scene load_steps=2 format=3 uid="uid://m4wu5ie2ep1f"]

[ext_resource type="Script" uid="uid://dn7xtjyoi3odj" path="res://scripts/mainMenu.gd" id="1_qkhwq"]

[node name="MainMenu" type="Node2D"]
script = ExtResource("1_qkhwq")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 1152.0
offset_bottom = 648.0

[node name="Label" type="Label" parent="Control"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -124.0
offset_top = 72.0
offset_right = 12.0
offset_bottom = 209.0
grow_horizontal = 2
size_flags_horizontal = 8
size_flags_vertical = 8
theme_type_variation = &"HeaderLarge"
theme_override_font_sizes/font_size = 100
text = "Eri"
horizontal_alignment = 1

[node name="GameLabel" type="Control" parent="Control"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_top = 64.0
offset_bottom = 64.0
grow_horizontal = 2

[node name="TitleLabel" type="Label" parent="Control/GameLabel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 83.0
offset_top = 506.0
offset_right = 565.0
offset_bottom = 582.0
grow_horizontal = 2
size_flags_horizontal = 8
size_flags_vertical = 8
theme_type_variation = &"HeaderLarge"
theme_override_font_sizes/font_size = 22
text = "(R) ریست لول بدون از دست دادن امتیازات
(H) باز و بسته کردن فروشگاه"
horizontal_alignment = 2

[node name="TitleLabel2" type="Label" parent="Control/GameLabel"]
layout_mode = 0
offset_left = 24.0
offset_top = 96.0
offset_right = 120.0
offset_bottom = 130.0
theme_type_variation = &"HeaderLarge"
theme_override_font_sizes/font_size = 24
text = "Unfair"
horizontal_alignment = 1

[node name="Options" type="VFlowContainer" parent="Control"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -112.0
offset_top = -336.0
offset_right = 109.5
offset_bottom = -112.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 4
size_flags_vertical = 8

[node name="StartButton" type="Button" parent="Control/Options"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "         شروع         "

[node name="FullscreenButton" type="Button" parent="Control/Options"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "تمام صفحه"

[node name="ShopButton" type="Button" parent="Control/Options"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "فروشگاه (H)"

[node name="QuitButton" type="Button" parent="Control/Options"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "خروج"

[connection signal="pressed" from="Control/Options/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="Control/Options/FullscreenButton" to="." method="_on_fullscreen_button_pressed"]
[connection signal="pressed" from="Control/Options/ShopButton" to="." method="_on_shop_button_pressed"]
[connection signal="pressed" from="Control/Options/QuitButton" to="." method="_on_quit_button_pressed"]
